add gravity & collision

--- a/bounce/index.html
+++ b/bounce/index.html
@@ -7,7 +7,12 @@
         <title>Document</title>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
+        <div>
+            <canvas id="canvas"></canvas>
+        </div>
         <script type="module" src="./build/index.js"></script>
+
+        <button id="button1">stop</button>
+        <button id="button2">start</button>
     </body>
 </html>
