--- a/threejs/index.html
+++ b/threejs/index.html
@@ -15,7 +15,8 @@
         </style>
     </head>
     <body>
-        <script src="lib/three.js"></script>
-        <script src="build/index.js"></script>
+        <script src="https://threejs.org/build/three.js"></script>
+        <script src="./build/WebGL.js"></script>
+        <script type="module" src="./build/index.js"></script>
     </body>
 </html>
