--- a/threejs/index.html
+++ b/threejs/index.html
@@ -15,7 +15,7 @@
         </style>
     </head>
     <body>
-        <script src="https://threejs.org/build/three.js"></script>
+        <script type="module" src="https://threejs.org/build/three.js"></script>
         <script src="./build/WebGL.js"></script>
         <script type="module" src="./build/index.js"></script>
     </body>
